--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Spicy+Rice');
 
 
 /* Down below is css to reset predefined values, a CSS reset */
@@ -51,6 +51,11 @@ table {
 	border-spacing: 0;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
 /* End of CSS reset */
 
 
@@ -59,11 +64,146 @@ html {
     font-family: Arial, 'Times New Roman';
 }
 
-header {
-    font-family: 'Roboto', sans-serif;
-}
-
 body {
     background-image: url('../img/background.png');
-    position: fixed;
+	position: fixed;
+	width: 100%;
 }
+
+
+.main {
+	width: 100%;
+	margin: auto;
+
+	text-align: center;
+	border: 2px #000 solid;
+
+}
+
+.main > * {
+	border: 2px #000 solid;
+	width: 100%;
+	margin: auto;
+}
+
+header {
+	background-image: url('../img/companylogoBG.png');
+	background-size: cover;
+	height: 5rem;
+	line-height: 5rem;
+}
+
+h1 {
+	font-family: 'Spicy Rice', cursive;
+	font-size: 2rem;
+	-webkit-text-stroke: 1px #000;
+	-webkit-text-fill-color: #fff;
+	color: white;
+}
+
+.hamburger {
+	display: block;
+	position: relative;
+	top: 50px;
+	left: 50px;
+	
+	z-index: 1;
+	
+	-webkit-user-select: none;
+	user-select: none;
+}
+
+.hamburger input {
+	display: block;
+	width: 40px;
+	height: 32px;
+	position: absolute;
+	top: -7px;
+	left: -5px;
+	
+	cursor: pointer;
+	
+	opacity: 0; /* hide this */
+	z-index: 2; /* and place it over the hamburger */
+	
+	-webkit-touch-callout: none;
+}
+
+.hamburger span {
+	display: block;
+	width: 33px;
+	height: 4px;
+	margin-bottom: 5px;
+	position: relative;
+	
+	background: #cdcdcd;
+	border-radius: 3px;
+	
+	z-index: 1;
+	
+	transform-origin: 4px 0px;
+	
+	transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+				background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+				opacity 0.55s ease;
+}
+
+.hamburger span:first-child {
+	transform-origin: 0% 0%;
+}
+
+.hamburger span:nth-last-child(2) {
+	transform-origin: 0% 100%;
+}
+
+.hamburger input:checked ~ span {
+	opacity: 1;
+	transform: rotate(45deg) translate(-2px, -1px);
+	background: #232323;
+}
+
+.hamburger input:checked ~ span:nth-last-child(3)
+{
+	opacity: 0;
+	transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+.hamburger input:checked ~ span:nth-last-child(2)
+{
+	transform: rotate(-45deg) translate(0, -1px);
+}
+
+.menu
+{
+	position: absolute;
+	width: 300px;
+	margin: -100px 0 0 -50px;
+	padding: 50px;
+	padding-top: 125px;
+
+	background: #ededed;
+	list-style-type: none;
+	-webkit-font-smoothing: antialiased;
+	/* to stop flickering of text in safari */
+
+	transform-origin: 0% 0%;
+	transform: translate(-100%, 0);
+
+	transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+.menu li
+{
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+.hamburger input:checked ~ ul
+{
+  transform: none;
+}
+
+nav a {
+	transition: color 0.2s ease;
+}
+
