Added some comments to order Stylesheet

--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ a {
 /* End of CSS reset */
 
 
-
+/* General style section (mobile) */
 html {
     font-family: Arial, 'Times New Roman';
 }
@@ -70,7 +70,6 @@ body {
 	position: fixed;*/
 	width: 100%;
 }
-
 
 .main {
 	width: 100%;
@@ -85,6 +84,7 @@ body {
 	margin: 0.2rem auto;
 }
 
+/* Header style section (mobile) */
 header {
 	background-image: url('../img/companylogoBG.png');
 	background-size: cover;
@@ -100,6 +100,7 @@ h1 {
 	color: white;
 }
 
+/* Navigation (+hamburger) style section (mobile) */
 nav {
 	background-color: #707070;
 }
@@ -160,4 +161,7 @@ nav {
   display: inline;
 }
 
+/* Content style section (mobile) */
+
+/* Footer style section (mobile) */
 
