--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,51 @@ nav {
   display: inline;
 }
 
-/* Content style section (mobile) */
+/* General content style section (mobile) */
+h3 {
+	padding: 0.5rem 5rem;
+	background-color: #2699FB;
+	height: 3.5rem;
+	line-height: 1.7rem;
+	font-size: 1.5rem;
+	color: #fff;
+	text-transform: uppercase;
+}
+ .content > h3:first-child {
+	padding: 0.5rem 3rem;
+ }
+/* Index page content */
+.index-img1 {
+	 background-image: url('../img/product3.png');
+ }
+
+ .index-img2 {
+	background-image: url('../img/product8.png');
+}
+
+.index-img3 {
+	background-image: url('../img/product6.png');
+}
+
+.index-img4 {
+	background-image: url('../img/product9.png');
+}
+
+.content figure {
+	background-size: cover;
+	width:  20rem;
+	height: 10rem;
+	margin: 0.2rem 0;
+ }
+
+
+
+/* Product page content */
+
+
+/* Contact page content */
+
+
 
 /* Footer style section (mobile) */
 
