--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,9 @@ html {
 body {
 	background-color: #fff;
    /* background-image: url('../img/background.png');
-	position: fixed;*/
+	background-attachement: fixed;
+	background-repeat: no-repeat;
+	*/
 	width: 100%;
 }
 
@@ -88,6 +90,8 @@ body {
 header {
 	background-image: url('../img/companylogoBG.png');
 	background-size: cover;
+	background-position: center center;
+	background-repeat: no-repeat;
 	height: 5rem;
 	line-height: 5rem;
 }
@@ -170,9 +174,11 @@ h3 {
 	font-size: 1.5rem;
 	color: #fff;
 	text-transform: uppercase;
+	display: none;
 }
  .content > h3:first-child {
-	padding: 0.5rem 3rem;
+	padding: 0.5rem 4rem;
+	display: block;
  }
 /* Index page content */
 .index-img1 {
@@ -193,8 +199,10 @@ h3 {
 
 .content figure {
 	background-size: cover;
-	width:  20rem;
-	height: 10rem;
+	background-position: center center;
+	background-repeat: no-repeat;
+	width: 100%;
+	height: 8rem;
 	margin: 0.2rem 0;
  }
 
@@ -208,4 +216,10 @@ h3 {
 
 
 /* Footer style section (mobile) */
-
+footer {
+	background-color: #000;
+	color: #fff;
+	font-size: 0.8rem;
+	height: 3rem;
+	line-height: 3rem;
+}
