--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ a {
 
 
 /* General style section (mobile) */
-html {
+html, textarea {
     font-family: Arial, 'Times New Roman';
 }
 
@@ -71,6 +71,7 @@ body {
 	background-repeat: no-repeat;
 	*/
 	width: 100%;
+	height: 100%;
 }
 
 .main {
@@ -88,7 +89,7 @@ body {
 
 /* Header style section (mobile) */
 header {
-	background-image: url('../img/companylogoBG.png');
+	background-image: url('../img/companylogoBG.jpg');
 	background-size: cover;
 	background-position: center center;
 	background-repeat: no-repeat;
@@ -182,19 +183,19 @@ h3 {
  }
 /* Index page content */
 .index-img1 {
-	 background-image: url('../img/product3.png');
+	 background-image: url('../img/product3.jpg');
  }
 
  .index-img2 {
-	background-image: url('../img/product8.png');
+	background-image: url('../img/product8.jpg');
 }
 
 .index-img3 {
-	background-image: url('../img/product6.png');
+	background-image: url('../img/product6.jpg');
 }
 
 .index-img4 {
-	background-image: url('../img/product9.png');
+	background-image: url('../img/product9.jpg');
 }
 
 .content figure {
@@ -209,61 +210,106 @@ h3 {
 
 
 /* Product page content */
-.products-header1 {
+.single-line {
 	line-height: 2rem;
 	height: 2rem;
 }
 
-.catalog > figure:nth-child(1){
-	background-image: url('../img/product1.png');
+.catalog > a:nth-child(1) > figure {
+	background-image: url('../img/product1.jpg');
 }
 
-.catalog > figure:nth-child(2){
-	background-image: url('../img/product2.png');
+.catalog > a:nth-child(2) > figure{
+	background-image: url('../img/product2.jpg');
 }
 
-.catalog > figure:nth-child(3){
-	background-image: url('../img/product3.png');
+.catalog > a:nth-child(3) > figure{
+	background-image: url('../img/product3.jpg');
 }
 
-.catalog > figure:nth-child(4){
-	background-image: url('../img/product4.png');
+.catalog > a:nth-child(4) > figure{
+	background-image: url('../img/product4.jpg');
 }
 
-.catalog > figure:nth-child(5){
-	background-image: url('../img/product5.png');
+.catalog > a:nth-child(5) > figure{
+	background-image: url('../img/product5.jpg');
 }
 
-.catalog > figure:nth-child(6){
-	background-image: url('../img/product6.png');
+.catalog > a:nth-child(6) > figure{
+	background-image: url('../img/product6.jpg');
 }
 
-.catalog > figure:nth-child(7){
-	background-image: url('../img/product7.png');
+.catalog > a:nth-child(7) > figure{
+	background-image: url('../img/product7.jpg');
 }
 
-.catalog > figure:nth-child(8){
-	background-image: url('../img/product8.png');
+.catalog > a:nth-child(8) > figure{
+	background-image: url('../img/product8.jpg');
 }
 
-.catalog > figure:nth-child(9){
-	background-image: url('../img/product9.png');
+.catalog > a:nth-child(9) > figure{
+	background-image: url('../img/product9.jpg');
 }
 
-.catalog > figure:nth-child(10){
-	background-image: url('../img/product10.png');
+.catalog > a:nth-child(10) > figure{
+	background-image: url('../img/product10.jpg');
 }
 
-.catalog > figure:nth-child(11){
-	background-image: url('../img/product11.png');
+.catalog > a:nth-child(11) > figure{
+	background-image: url('../img/product11.jpg');
 }
 
-.catalog > figure:nth-child(12){
-	background-image: url('../img/product12.png');
+.catalog > a:nth-child(12) > figure{
+	background-image: url('../img/product12.jpg');
 }
 
 /* Contact page content */
+h4 {
+	display: none;
+}
 
+.select-topic, .textfield, textarea {
+	border: #000 1px solid;
+	width: 80%;
+	margin: 0.5rem auto;
+	padding: 0.4rem;
+}
+
+form {
+	background-color: #F5F5F5;
+	padding-top: 2rem;
+}
+
+.button {
+	width: 80%;
+	color: #fff;
+	background-color: #2699FB;
+	border: none;
+	padding: 0.3rem;
+	margin-bottom: 0.5rem;
+}
+
+.select-topic {
+	background-color: #fff;
+}
+
+.select-topic > * {
+	display:block;
+}
+
+.select-topic > label {
+	text-align: left;
+	font-size: 0.8rem;
+	color: #707070;
+	margin-bottom: 0.7rem;
+}
+
+ select {
+	 width: 100%;
+	 
+	 background: #fff;
+
+ }
 
 /* Footer style section (mobile) */
 footer {
