--- a/css/style.css
+++ b/css/style.css
@@ -66,10 +66,6 @@ html, textarea {
 
 body {
 	background-color: #fff;
-   /* background-image: url('../img/background.png');
-	background-attachement: fixed;
-	background-repeat: no-repeat;
-	*/
 	width: 100%;
 	height: 100%;
 }
@@ -182,12 +178,12 @@ article {
 	font-size: 1.5rem;
 	color: #fff;
 	text-transform: uppercase;
-	margin: auto;
-	width: 40%;
+	
+	max-width: 40%;
  }
 
  .content > article:first-child > h3 {
-	width: 70%;
+	max-width: 70%;
  }
 
 /* Index page content */
@@ -430,5 +426,133 @@ footer {
 }
 
 @media (min-width: 960px){
-	
+	/* General style (Web)*/
+	body {
+		background-image: url('../img/background.jpeg');
+		background-attachment: fixed;
+		background-repeat: no-repeat;
+		}
+
+	.main {
+		width: 45%;
+		background-color: #fff;
+	}
+
+	.content > article {
+		display: flex;
+		height: 8rem;
+	}
+
+	.content > article > h3 {
+		font-size: 3rem;
+		max-width: 300px;
+	}
+
+	.content > article:first-child > h3 {
+		max-width: 500px;
+	}
+
+	/* Header style (Web)*/
+	header {
+		height: 8rem;
+		line-height: 8rem;
+	}
+
+	h1 {
+		font-size: 4rem;
+	}
+
+	/* Navigation style (Web)*/
+	.menu > li {
+		font-size: 1.5rem;
+	}
+
+	/* Index content style (Web)*/
+	.main > .index-content figure {
+		width: 100%;
+		display: flex;
+		margin: 0;
+		height: 20rem;
+	}
+
+	/* Products content style (Web)*/
+	.products-content > article  {
+		height: 6rem;
+	}
+
+	.products-content > article > h3 {
+		max-width: 1000px;
+		font-size: 4rem;
+	}
+
+	.catalog a {
+		width: 32%;
+		margin: 0.5%;
+	}
+
+	.catalog > a > figure {
+		height: 10rem;
+	}
+
+	/* Contact content style (Web)*/
+	#contact-header {
+		display: flex;
+		height: 7rem;
+	}
+
+	#contact-header > h3 {
+		font-size: 4.5rem;
+	}
+
+	h4 {
+		display: block;
+		float: left;
+		color: #707070;
+
+		font-size: 1.7rem;
+		margin: 1.5rem 0 0 1.5rem;
+	}
+
+	.select-topic > label{
+		float: left;
+		width: 35%;
+		margin: 0.3rem 0 0 0.3rem;
+	}
+
+	.select-topic > label, fieldset > input::placeholder, fieldset > textarea::placeholder {
+		font-size: 1.5rem;
+		color: #AAAAAA;
+	}
+
+	fieldset > input {
+		height: 2rem;
+		font-size: 1.5rem;
+	}
+
+	fieldset > textarea {
+		font-size: 1.5rem;
+		height: 7rem;
+	}
+
+	select {
+		float: right;
+		width: 60%;
+		font-size: 1.5rem;
+	}
+
+	form {
+		padding-top: 4rem;
+	}
+
+	.button{
+		font-size:1.5rem;
+		margin-bottom: 2.5rem;
+	}
+
+	/* Footer style (web) */
+	footer {
+		height: 3rem;
+		line-height:3rem;
+		font-size: 1.2rem;
+	}
 }
