--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ body {
 
 /* Header style section (mobile) */
 header {
-	background-image: url('../img/companylogoBG.jpg');
+	background-image: url('../img/companylogoBG.png');
 	background-size: cover;
 	background-position: center center;
 	background-repeat: no-repeat;
@@ -92,10 +92,9 @@ header {
 }
 
 h1 {
-	font-family: 'Spicy Rice', cursive;
+	font-family: 'Spicy Rice', cursive, 'Times New Roman';
 	font-size: 2rem;
-	-webkit-text-stroke: 1px #000;
-	-webkit-text-fill-color: #fff;
+	text-shadow: 4px 4px #000;
 	color: white;
 	text-transform: uppercase;
 }
@@ -187,19 +186,19 @@ article {
 
 /* Index page content */
 .index-img1 {
-	 background-image: url('../img/product3.jpg');
+	 background-image: url('../img/product3.png');
  }
 
  .index-img2 {
-	background-image: url('../img/product8.jpg');
+	background-image: url('../img/product8.png');
 }
 
 .index-img3 {
-	background-image: url('../img/product6.jpg');
+	background-image: url('../img/product6.png');
 }
 
 .index-img4 {
-	background-image: url('../img/product9.jpg');
+	background-image: url('../img/product9.png');
 }
 
 .content figure {
@@ -226,51 +225,51 @@ article {
 }
 
 .catalog > a:nth-child(1) > figure {
-	background-image: url('../img/product1.jpg');
+	background-image: url('../img/product1.png');
 }
 
 .catalog > a:nth-child(2) > figure{
-	background-image: url('../img/product2.jpg');
+	background-image: url('../img/product2.png');
 }
 
 .catalog > a:nth-child(3) > figure{
-	background-image: url('../img/product3.jpg');
+	background-image: url('../img/product3.png');
 }
 
 .catalog > a:nth-child(4) > figure{
-	background-image: url('../img/product4.jpg');
+	background-image: url('../img/product4.png');
 }
 
 .catalog > a:nth-child(5) > figure{
-	background-image: url('../img/product5.jpg');
+	background-image: url('../img/product5.png');
 }
 
 .catalog > a:nth-child(6) > figure{
-	background-image: url('../img/product6.jpg');
+	background-image: url('../img/product6.png');
 }
 
 .catalog > a:nth-child(7) > figure{
-	background-image: url('../img/product7.jpg');
+	background-image: url('../img/product7.png');
 }
 
 .catalog > a:nth-child(8) > figure{
-	background-image: url('../img/product8.jpg');
+	background-image: url('../img/product8.png');
 }
 
 .catalog > a:nth-child(9) > figure{
-	background-image: url('../img/product9.jpg');
+	background-image: url('../img/product9.png');
 }
 
 .catalog > a:nth-child(10) > figure{
-	background-image: url('../img/product10.jpg');
+	background-image: url('../img/product10.png');
 }
 
 .catalog > a:nth-child(11) > figure{
-	background-image: url('../img/product11.jpg');
+	background-image: url('../img/product11.png');
 }
 
 .catalog > a:nth-child(12) > figure{
-	background-image: url('../img/product12.jpg');
+	background-image: url('../img/product12.png');
 }
 
 /* Contact page content */
@@ -427,7 +426,7 @@ footer {
 @media (min-width: 960px){
 	/* General style (Web)*/
 	/* body {
-		background-image: url('../img/background.jpeg');
+		background-image: url('../img/background.png');
 		background-attachment: fixed;
 		background-repeat: no-repeat;
 	} */
@@ -470,7 +469,7 @@ footer {
 	}
 
 	h1 {
-		font-size: 4rem;
+		font-size: 3.8rem;
 	}
 
 	/* Navigation style (Web)*/
